k8s_up_and_running/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
#  type: ClusterIP
  selector:
    app: mlflow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
