k8s_up_and_running/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: mlflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "noblejuga.com"
      http:
        paths:
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow-service
                port:
                  number: 80
